--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,45 @@
     tools:context="eder.padilla.kotlinandroidcourse.MainActivity">
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/mEtGetAge"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
+        android:hint="Ingresa tu año de nacimiento"
         android:inputType="number"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="60dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/mTvAge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:textColor="@color/colorAccent"
         android:text="Tu edad se muestra aqui"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="173dp" />
+        android:layout_marginTop="50dp"
+        android:textSize="22sp"
+        app:layout_constraintTop_toBottomOf="@+id/mEtGetAge"
+        app:layout_constraintHorizontal_bias="0.502" />
+
+    <Button
+        android:id="@+id/mBtnGetAge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="26dp"
+        android:layout_marginTop="61dp"
+        android:background="@color/colorAccent"
+        android:onClick="getAgeEvent"
+        android:text="Obten mi edad"
+        app:layout_constraintHorizontal_bias="0.878"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mTvAge" />
 </android.support.constraint.ConstraintLayout>
