--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,6 @@
     <color name="whiteback"  >#f9f9f9</color>
     <color name="whitebackground"  >#d4d3d3</color>
     <color name="black"  >#FF040303</color>
-    <color name="gray">#6B6B6D</color>
+    <color name="gray">#d4d3d3</color>
     <color name="buop">#F79231</color>
 </resources>
