Se agrego un ejemplo de reproduccion de media tanto de url, como initerna del celular

--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -51,6 +51,7 @@
                 android:layout_width="40pt"
                 android:layout_height="20pt"
                 android:layout_weight="1"
+                android:onClick=""
                 app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
         </LinearLayout>
 
