Se agregaron ejeplos de acelerometro y de sensor de luz

--- a/app/src/main/res/layout/activity_get_my_age.xml
+++ b/app/src/main/res/layout/activity_get_my_age.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eder.padilla.kotlinandroidcourse.MainActivity">
+    tools:context="eder.padilla.kotlinandroidcourse.simplegetage.GetMyAgeActivity">
 
     <EditText
         android:id="@+id/mEtGetAge"
